--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Dennis Loska
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Germany
+description: Hi I'm Dennis. Welcome to my blog. I write about IT, Veganism, Cycling, Flag Theory and other topics that I am passionate about.  
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/8688332?s=400&u=eba78138201513b3091858f6bc96bd2f9ec8d64f&v=4
@@ -18,17 +18,17 @@ avatar: https://avatars1.githubusercontent.com/u/8688332?s=400&u=eba78138201513b
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: codefree@protonmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  github: DennisLoska
+  instagram: dennis.loska
+  linkedin: dennisloska
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: dennis_loska1
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UC20T0j_TFXe62pXQkVlLImg # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
@@ -37,11 +37,11 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-124199510-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://www.dennisloska.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
