--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Dennis Loska
 
 # Short bio or description (displayed in the header)
-description: IT, veganism, cycling, digital nomad
+description: web, veganism, cycling, digital nomad lifestyle
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/8688332?s=400&u=eba78138201513b3091858f6bc96bd2f9ec8d64f&v=4
