--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Dennis Loska
 description: web, veganism, cycling, digital nomad lifestyle
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/8688332?s=400&u=eba78138201513b3091858f6bc96bd2f9ec8d64f&v=4
+avatar: https://pbs.twimg.com/profile_images/1031178280022495234/0n3K7Y6p_400x400.jpg 
+# https://avatars1.githubusercontent.com/u/8688332?s=400&u=eba78138201513b3091858f6bc96bd2f9ec8d64f&v=4
 
 #
 # Flags below are optional
