--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,9 @@ sass:
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jemoji
 
 # Exclude these files from your production _site
 exclude:
